# quantum-player-eq-work

./: CMakeLists.txt
src/: mainwindow.cpp  mainwindow.h
src/dsp/: biquadfilter.h
src/player/: audioengine.cpp  audioengine.h
